--- a/pages/sinopsis-gay.html
+++ b/pages/sinopsis-gay.html
@@ -44,7 +44,7 @@
             </div>
         </section>
         <div>
-            <a href="./sinopsis.html#up-g">
+            <a href="./sinopsis-gay.html#up-g">
                 <button>
                     ↑
                 </button></a>
