--- a/pages/sinopsis-ingles.html
+++ b/pages/sinopsis-ingles.html
@@ -44,7 +44,7 @@
             </div>
         </section>
         <div>
-            <a href="./sinopsis.html#up-i">
+            <a href="./sinopsis-ingles.html#up-i">
                 <button>
                     ↑
                 </button></a>
