--- a/pages/sinopsis-trans.html
+++ b/pages/sinopsis-trans.html
@@ -44,7 +44,7 @@
             </div>
         </section>
         <div>
-            <a href="./sinopsis.html#up-t">
+            <a href="./sinopsis-trans.html#up-t">
                 <button>
                     ↑
                 </button></a>
