--- a/pages/sinopsis-les.html
+++ b/pages/sinopsis-les.html
@@ -44,7 +44,7 @@
             </div>
         </section>
         <div>
-            <a href="./sinopsis.html#up">
+            <a href="./sinopsis-les.html#up">
                 <button>
                     ↑
                 </button></a>
