cambio de tamaño de fuente

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <h4>CHICAS QUE AMAN A CHICAS</h4>
                 <a href="./pages/lesbianas.html">
-                    <img class="cover" src="./assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+                    <img class="cover" src="./assets/imagenes/book-covers/una-ultima-parada.jpg" alt="Una última parada - Portada de libro">
                     <img class="cover" src="./assets/imagenes/book-covers/el-rio.jpg" alt="El río de las primeras veces - Portada de libro">
                     <img class="cover" src="./assets/imagenes/book-covers/los-siete.jpg" alt="Los siete maridos de Evelyn Hugo- Portada de libro">
                     <img class="cover" src="./assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometria del amor - Portada de libro">
