--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -51,12 +51,12 @@
             </div>
         </section>
         <section class="card-container">
-            <div class="card" id="g">
-                <img src="../assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro">
+            <div class="card" id="parada">
+                <img src="../assets/imagenes/book-covers/una-ultima-parada.jpg" alt="Una última parada - Portada de libro">
                 <div class="card-content">
-                    <h5>10 días para G</h5>
-                    <p>Cristina Vigo</p>
-                    <a href="../pages/sinopsis-les.html/#gs" target="_blank">Ver más...</a>
+                    <h5>Una última parada</h5>
+                    <p>Casey McQuiston</p>
+                    <a href="../pages/sinopsis-les.html#paradas" target="_blank">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="rio">
