--- a/pages/sinopsis-les.html
+++ b/pages/sinopsis-les.html
@@ -54,13 +54,13 @@
                 <h3>Chicas que aman a chicas</h3>
             </div>
         </section>
-        <section class="card-sinopsis-1" id="gs">
+        <section class="card-sinopsis-1" id="paradas">
             <div>
-                <h5>10 días para G - Cristina Vigo</h5>
-                <p>Majlies Sullivan, hija de un magnate bostoniano de la construcción, decide viajar a Nueva York justo diez días antes de su boda a pesar de la oposición familiar. Quiere visitar a su prima Cate, lesbiana y alejada de ella desde la adolescencia, pero no sabe que bajarse del tren en Penn Station hará que su vida comience a perder sentido... O tal vez empiece a tenerlo de verdad.</p>
+                <h5>Una última parada - Casey McQuiston</h5>
+                <p>August, una joven de veintitrés años, no cree en casi nada. Ni en los videntes, ni en las amistades que se entablan con facilidad, ni en encontrar esa clase de amor que sale en las películas. Entonces llega Jane. La misteriosa e imposible Jane. Con mucho carácter, una sonrisa amable y el pelo alborotado, aparece para ayudar a August cuando ella más lo necesita.</p>
             </div>
             <div>
-                <a href="./lesbianas.html#g"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/10-dia-para-G.png" alt="10 días para G - Portada de libro"></a>
+                <a href="./lesbianas.html#paradas"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/una-ultima-parada.jpg" alt="Una última parada - Portada de libro"></a>
             </div>
         </section>
         <section class="card-sinopsis-2" id="rios">
