--- a/pages/gays.html
+++ b/pages/gays.html
@@ -56,15 +56,15 @@
                 <div class="card-content">
                     <h5>Lo que nunca fuimos</h5>
                     <p>Mike Lightwood</p>
-                    <a href="../pages/sinopsis-gay.html#nuncas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#nuncas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="nosotros">
                 <img src="../assets/imagenes/book-covers/y-si-fueramos-nosotros.jpg" alt="¿Y si fueramos nosotros? - Portada de libro">
                 <div class="card-content">
                     <h5>¿Y si fuéramos nosotros?</h5>
-                    <p>Becky Albertalli, Adam Silvera</p>
-                    <a href="../pages/sinopsis-gay.html#nosotross" target="_blank">Ver más...</a>
+                    <p>Becky Albertalli</p>
+                    <a href="../pages/sinopsis-gay.html#nosotross">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="apt">
@@ -72,7 +72,7 @@
                 <div class="card-content">
                     <h5>Alguien para ti</h5>
                     <p>Juan Arcones</p>
-                    <a href="../pages/sinopsis-gay.html#apts" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#apts">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="cuentan">
@@ -80,7 +80,7 @@
                 <div class="card-content">
                     <h5>Lo que cuentan de nosotros</h5>
                     <p>Iñigo Aguas</p>
-                    <a href="../pages/sinopsis-gay.html#cuentans" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#cuentans">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="rojo">
@@ -88,7 +88,7 @@
                 <div class="card-content">
                     <h5>Rojo, blanco y sangre azul</h5>
                     <p>Casey McQuiston</p>
-                    <a href="../pages/sinopsis-gay.html#rojos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#rojos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="heart1">
@@ -96,7 +96,7 @@
                 <div class="card-content">
                     <h5>Heartstopper 1. Dos Chicos Juntos</h5>
                     <p>Alice Oseman</p>
-                    <a href="../pages/sinopsis-gay.html#heart1s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#heart1s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="heart2">
@@ -104,7 +104,7 @@
                 <div class="card-content">
                     <h5>Heartstopper 2. Mi persona favorita</h5>
                     <p>Alice Oseman</p>
-                    <a href="../pages/sinopsis-gay.html#heart2s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#heart2s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="heart3">
@@ -112,7 +112,7 @@
                 <div class="card-content">
                     <h5>Heartstopper 3. Un paso adelante</h5>
                     <p>Alice Oseman</p>
-                    <a href="../pages/sinopsis-gay.html#heart3s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#heart3s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="heart4">
@@ -120,7 +120,7 @@
                 <div class="card-content">
                     <h5>Heartstopper 4. Más que palabras</h5>
                     <p>Alice Oseman</p>
-                    <a href="../pages/sinopsis-gay.html#heart4s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#heart4s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="llama">
@@ -128,7 +128,7 @@
                 <div class="card-content">
                     <h5>Llámame por tu nombre</h5>
                     <p>André Aciman</p>
-                    <a href="../pages/sinopsis-gay.html#llamas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#llamas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="cliche1">
@@ -136,7 +136,7 @@
                 <div class="card-content">
                     <h5>La búsqueda del cliché perfecto</h5>
                     <p>Michelle Durán</p>
-                    <a href="../pages/sinopsis-gay.html#cliche1s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#cliche1s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="imper">
@@ -144,15 +144,15 @@
                 <div class="card-content">
                     <h5>El cliché (im)perfecto que somos tú y yo</h5>
                     <p>Michelle Durán</p>
-                    <a href="../pages/sinopsis-gay.html#impers" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#impers">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="firma">
                 <img src="../assets/imagenes/book-covers/hasta-que-una-firma-nos-separe.jpg" alt="Hasta que una firma nos separe - Portada de libro">
                 <div class="card-content">
                     <h5>Hasta que una firma nos separe</h5>
-                    <p>Fernanda R. Rodriguez</p>
-                    <a href="../pages/sinopsis-gay.html#firmas" target="_blank">Ver más...</a>
+                    <p>Fernanda R. Rodríguez</p>
+                    <a href="../pages/sinopsis-gay.html#firmas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="conmigo">
@@ -160,7 +160,7 @@
                 <div class="card-content">
                     <h5>Tu lugar es conmigo</h5>
                     <p>Josh Taylor</p>
-                    <a href="../pages/sinopsis-gay.html#conmigos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#conmigos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="solo">
@@ -168,7 +168,7 @@
                 <div class="card-content">
                     <h5>No solo eres amor</h5>
                     <p>Sonia Puente</p>
-                    <a href="../pages/sinopsis-gay.html#solos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#solos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="pasos">
@@ -176,7 +176,7 @@
                 <div class="card-content">
                     <h5>Tres pasos atrás</h5>
                     <p>Jash Spina</p>
-                    <a href="../pages/sinopsis-gay.html#pasoss" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#pasoss">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="principe">
@@ -184,7 +184,7 @@
                 <div class="card-content">
                     <h5>Aprendiz de príncipe</h5>
                     <p>Arianne Martín</p>
-                    <a href="../pages/sinopsis-gay.html#principes" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#principes">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="palomita">
@@ -192,7 +192,7 @@
                 <div class="card-content">
                     <h5>Palomitas en la universidad</h5>
                     <p>Roser A. Ochoa</p>
-                    <a href="../pages/sinopsis-gay.html#palomintas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#palomitas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="vivir">
@@ -200,7 +200,7 @@
                 <div class="card-content">
                     <h5>Quiero vivir en vos alta</h5>
                     <p>Susana Herrero</p>
-                    <a href="../pages/sinopsis-gay.html#vivirs" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-gay.html#vivirs">Ver más...</a>
                 </div>
             </div>
         </section>
