--- a/pages/ingles.html
+++ b/pages/ingles.html
@@ -56,7 +56,7 @@
                 <div class="card-content">
                     <h5>Melt with you</h5>
                     <p>Jennifer Dugan</p>
-                    <a href="../pages/sinopsis-ingles.html#melts" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#melts">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="royal">
@@ -64,7 +64,7 @@
                 <div class="card-content">
                     <h5>Her royal highnes</h5>
                     <p>Rachel Hawkins</p>
-                    <a href="../pages/sinopsis-ingles.html#royals" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#royals">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="cool">
@@ -72,7 +72,7 @@
                 <div class="card-content">
                     <h5>Cool for the summer</h5>
                     <p>Dahlia Adler</p>
-                    <a href="../pages/sinopsis-ingles.html#cools" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#cools">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="coven">
@@ -80,7 +80,7 @@
                 <div class="card-content">
                     <h5>Coven</h5>
                     <p>Jennifer Dugan</p>
-                    <a href="../pages/sinopsis-ingles.html#covens" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#covens">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="mistakes">
@@ -88,7 +88,7 @@
                 <div class="card-content">
                     <h5>Mistakes were made</h5>
                     <p>Meryl Wilsner</p>
-                    <a href="../pages/sinopsis-ingles.html#mistakess" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#mistakess">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="how">
@@ -96,7 +96,7 @@
                 <div class="card-content">
                     <h5>How to excavate a heart</h5>
                     <p>Jake Maia Arlow</p>
-                    <a href="../pages/sinopsis-ingles.html#how" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#hows">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="suc">
@@ -104,7 +104,7 @@
                 <div class="card-content">
                     <h5>How to succeed in witchcraft</h5>
                     <p>Aislinn Brophy</p>
-                    <a href="../pages/sinopsis-ingles.html#sucs" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#sucs">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="magic">
@@ -112,7 +112,7 @@
                 <div class="card-content">
                     <h5>Improbable magic for cynical witches</h5>
                     <p>Kate Scelsa</p>
-                    <a href="../pages/sinopsis-ingles.html#magics" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#magics">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="goes">
@@ -120,7 +120,7 @@
                 <div class="card-content">
                     <h5>It goes like this</h5>
                     <p>Miel Moreland</p>
-                    <a href="../pages/sinopsis-ingles.html#goess" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#goess">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="get">
@@ -128,7 +128,7 @@
                 <div class="card-content">
                     <h5>She gets the girl</h5>
                     <p>Rachael Lippincott, Alyson Derrick</p>
-                    <a href="../pages/sinopsis-ingles.html#gets" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#gets">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="young">
@@ -136,7 +136,7 @@
                 <div class="card-content">
                     <h5>Youngblood</h5>
                     <p>Sasha Laurens</p>
-                    <a href="../pages/sinopsis-ingles.html#youngs" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#youngs">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="burn">
@@ -144,7 +144,7 @@
                 <div class="card-content">
                     <h5>This witches don't burn</h5>
                     <p>Isabel Sterling</p>
-                    <a href="../pages/sinopsis-ingles.html#burns" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#burns">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="break">
@@ -152,7 +152,7 @@
                 <div class="card-content">
                     <h5>This coven won't break</h5>
                     <p>Isabel Sterling</p>
-                    <a href="../pages/sinopsis-ingles.html#breaks" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#breaks">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="last">
@@ -160,7 +160,7 @@
                 <div class="card-content">
                     <h5>This spell can't last</h5>
                     <p></p>
-                    <a href="../pages/sinopsis-ingles.html#lasts" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#lasts">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="montage">
@@ -168,7 +168,7 @@
                 <div class="card-content">
                     <h5>The falling in love montage</h5>
                     <p>Ciara Smyth</p>
-                    <a href="../pages/sinopsis-ingles.html#montage" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#montages">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="touch">
@@ -176,7 +176,7 @@
                 <div class="card-content">
                     <h5>The coldest touch</h5>
                     <p>Isabel Sterling</p>
-                    <a href="../pages/sinopsis-ingles.html#touchs" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-ingles.html#touchs">Ver más...</a>
                 </div>
             </div>
         </section>
