--- a/pages/sinopsis-les.html
+++ b/pages/sinopsis-les.html
@@ -60,7 +60,7 @@
                 <p>August, una joven de veintitrés años, no cree en casi nada. Ni en los videntes, ni en las amistades que se entablan con facilidad, ni en encontrar esa clase de amor que sale en las películas. Entonces llega Jane. La misteriosa e imposible Jane. Con mucho carácter, una sonrisa amable y el pelo alborotado, aparece para ayudar a August cuando ella más lo necesita.</p>
             </div>
             <div>
-                <a href="./lesbianas.html#paradas"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/una-ultima-parada.jpg" alt="Una última parada - Portada de libro"></a>
+                <a href="./lesbianas.html#parada"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/una-ultima-parada.jpg" alt="Una última parada - Portada de libro"></a>
             </div>
         </section>
         <section class="card-sinopsis-2" id="rios">
@@ -69,7 +69,7 @@
                 <p>Después de un año nada es igual que antes y aunque es cierto que no podemos cruzar dos veces el mismo río, hay ríos que necesitamos cruzar más de una vez. Una tierna y profunda historia sobre el amor entre dos chicas que buscan su lugar.</p>
             </div>
             <div>
-                <a href="./lesbianas.html#rio"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/el-rio.jpg" alt=" El río de las primeras veces"></a>
+                <a href="./lesbianas.html#rio"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/el-rio.jpg" alt="El río de las primeras veces"></a>
             </div>
         </section>
         <section class="card-sinopsis-1" id="sietes">
@@ -78,16 +78,16 @@
                 <p>Evelyn Hugo, el ícono de Hollywood que se ha recluido en su edad madura, decide al fin contar la verdad sobre su vida llena de glamour y de escándalos. Pero cuando elige para ello a Monique Grant, una periodista desconocida, nadie se sorprende más que la misma Monique. ¿Por qué ella? ¿Por qué ahora?</p>
             </div>
             <div>
-                <a href="./lesbianas.html#siete"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/los-siete.jpg" alt=""></a>
+                <a href="./lesbianas.html#siete"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/los-siete.jpg" alt="Los siete maridos de Evelyn Hugo - Portada de libro"></a>
             </div>
         </section>
         <section class="card-sinopsis-2" id="geos">
             <div>
-                <h5>La insensata geometroa del amor - Susuana Guzner</h5>
+                <h5>La insensata geometría del amor - Susuana Guzner</h5>
                 <p>María, una joven traductora madrileña, atraviesa una crisis debedio a la pérdida de su pareja sentimental. Desde entonces ha permanecido insensible al amor, pero el casual encuentro con una chica misteriosamente fascinante en el aeropuerto de Roma dará un vuelco completo a su vida, conduciéndola por un laberinto de emociones contradictorias. </p>
             </div>
             <div>
-                <a href="./lesbianas.html#geo"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometria del amor - Portada de libro"></a>
+                <a href="./lesbianas.html#geo"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometría del amor - Portada de libro"></a>
             </div>
         </section>
         <section class="card-sinopsis-1" id="plans">
@@ -108,13 +108,13 @@
                 <a href="./lesbianas.html#12"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/12700.jpg" alt="12700 km - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-1" id="7">
+        <section class="card-sinopsis-1" id="7s">
             <div>
                 <h5>7900 millas - Cris Ginsey</h5>
-                <p>Conocer a Virginia ha cambiado los esquemas de Amanda,la distancia puede llegar a dar mucho miedo y echarse de menos es cada vez más doloroso. Tras las videollamadas interminables siempre necesita más. La rutina en Melbourne no es sencilla y su nueva relación de pareja trae problemas que no se esperaba. Poco a poco se da cuenta de que su idea de vida perfecta es en realidad un refugio donde se esconde de sus verdaderos sueños.</p>
+                <p>Conocer a Virginia ha cambiado los esquemas de Amanda, la distancia puede llegar a dar mucho miedo y echarse de menos es cada vez más doloroso. Tras las videollamadas interminables siempre necesita más. La rutina en Melbourne no es sencilla y su nueva relación de pareja trae problemas que no se esperaba. Poco a poco se da cuenta de que su idea de vida perfecta es en realidad un refugio donde se esconde de sus verdaderos sueños.</p>
             </div>
             <div>
-                <a href="./lesbianas.html#7s"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/7900.jpg" alt="7900 millas - Portada de libro"></a>
+                <a href="./lesbianas.html#7"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/7900.jpg" alt="7900 millas - Portada de libro"></a>
             </div>
         </section>
         <section class="card-sinopsis-2" id="nias">
