--- a/pages/lesbianas.html
+++ b/pages/lesbianas.html
@@ -56,7 +56,7 @@
                 <div class="card-content">
                     <h5>Una última parada</h5>
                     <p>Casey McQuiston</p>
-                    <a href="../pages/sinopsis-les.html#paradas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#paradas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="rio">
@@ -64,7 +64,7 @@
                 <div class="card-content">
                     <h5>El río de las primeras veces</h5>
                     <p>Nando López</p>
-                    <a href="../pages/sinopsis-les.html#rios" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#rios">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="siete">
@@ -72,15 +72,15 @@
                 <div class="card-content">
                     <h5>Los siete maridos de Evelyn Hugo </h5>
                     <p>Taylor Jenkins Reid</p>
-                    <a href="../pages/sinopsis-les.html#sietes" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#sietes">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="geo">
-                <img src="../assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometria del amor - Portada de libro">
+                <img src="../assets/imagenes/book-covers/la-insensata-geometria-del-amor.png" alt="La insensata geometría del amor - Portada de libro">
                 <div class="card-content">
                     <h5>La insensata geometría del amor</h5>
                     <p>Susana Guzner</p>
-                    <a href="../pages/sinopsis-les.html#geos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#geos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="plan">
@@ -88,7 +88,7 @@
                 <div class="card-content">
                     <h5>El plan c</h5>
                     <p>Anna Pólux</p>
-                    <a href="../pages/sinopsis-les.html#plans" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#plans">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="12">
@@ -96,7 +96,7 @@
                 <div class="card-content">
                     <h5>12700 km</h5>
                     <p>Cris Ginsey</p>
-                    <a href="../pages/sinopsis-les.html#12s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#12s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="7">
@@ -104,7 +104,7 @@
                 <div class="card-content">
                     <h5>7900 millas</h5>
                     <p>Cris Ginsey</p>
-                    <a href="../pages/sinopsis-les.html#7s" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#7s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="nia">
@@ -112,7 +112,7 @@
                 <div class="card-content">
                     <h5>Nía</h5>
                     <p> Patricia Reimóndez Prieto</p>
-                    <a href="../pages/sinopsis-les.html#nias" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#nias">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="romeo">
@@ -120,7 +120,7 @@
                 <div class="card-content">
                     <h5>Me sobran los Romeos</h5>
                     <p>Anna Pólux</p>
-                    <a href="../pages/sinopsis-les.html#romeos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#romeos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="medusa">
@@ -128,23 +128,23 @@
                 <div class="card-content">
                     <h5>La isla de las medusas</h5>
                     <p>Anna Pólux</p>
-                    <a href="../pages/sinopsis-les.html#medusas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#medusas">Ver más...</a>
                 </div>
             </div>
-            <div class="card" id="medusa">
+            <div class="card" id="cosmo">
                 <img src="../assets/imagenes/book-covers/perdida.jpg" alt="Perdida en el cosmos - Portada de libro">
                 <div class="card-content">
                     <h5>Perdida en el cosmos</h5>
                     <p>Grizzly</p>
-                    <a href="../pages/sinopsis-les.html#cosmos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#cosmos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="girl">
                 <img src="../assets/imagenes/book-covers/girl.jpg" alt="Girl, girl, girl - Portada de libro">
                 <div class="card-content">
-                    <h5>Girl, girl girl</h5>
+                    <h5>Girl, girl, girl</h5>
                     <p>Ross Serra</p>
-                    <a href="../pages/sinopsis-les.html#girls" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#girls">Ver más...</a>
                 </div>
             </div>
             
@@ -153,7 +153,7 @@
                 <div class="card-content">
                     <h5>Una de esas chicas</h5>
                     <p>Inma Miralles</p>
-                    <a href="../pages/sinopsis-les.html#unas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#unas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="mat">
@@ -161,7 +161,7 @@
                 <div class="card-content">
                     <h5>Matices</h5>
                     <p>Thais Duthie</p>
-                    <a href="../pages/sinopsis-les.html#mats" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#mats">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="cuarta">
@@ -169,7 +169,7 @@
                 <div class="card-content">
                     <h5>Cuarta fase</h5>
                     <p>Andrea Mira</p>
-                    <a href="../pages/sinopsis-les.html#cuartas" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#cuartas">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="sombra">
@@ -177,7 +177,7 @@
                 <div class="card-content">
                     <h5>Bajo las sombras</h5>
                     <p>Stef León</p>
-                    <a href="../pages/sinopsis-les.html#sombras" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#sombras">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="armonia">
@@ -185,7 +185,7 @@
                 <div class="card-content">
                     <h5>Armonía secreta</h5>
                     <p>Stef León</p>
-                    <a href="../pages/sinopsis-les.html#armonias" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#armonias">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="cao">
@@ -193,7 +193,7 @@
                 <div class="card-content">
                     <h5>Cazar el caos</h5>
                     <p>Stef León</p>
-                    <a href="../pages/sinopsis-les.html" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-les.html#caos">Ver más...</a>
                 </div>
             </div>
         </section>
