--- a/pages/sinopsis-gay.html
+++ b/pages/sinopsis-gay.html
@@ -67,7 +67,7 @@
         </section>
         <section class="card-sinopsis-2" id="nosotross">
             <div>
-                <h5>¿Y si fueramos nosotros? - Becky Albertalli, Adam Silvera</h5>
+                <h5>¿Y si fueramos nosotros? - Becky Albertalli</h5>
                 <p>Arthur está en Nueva York solo por el verano, pero si Broadway le ha enseñado algo es que el universo te puede enviar un impresionante romance cuando menos te lo esperas. Ben piensa que el universo debe ocuparse de sus propios asuntos. Si el universo lo apoyara, no estaría en camino a la oficina del correo llevando una caja con las pertenencias de su exnovio.Pero cuando Ben y Arthur se encuentran en el correo, ¿qué es exactamente lo que el universo les tiene reservado?</p>
             </div>
             <div>
@@ -112,7 +112,7 @@
                 <a href="./gays.html#heart1"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/heart-one.jpg" alt="Heartstopper 1. Dos Chicos Juntos - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-1" id="hear2s">
+        <section class="card-sinopsis-1" id="heart2s">
             <div>
                 <h5>Heartstopper 2. Mi persona favorita - Alice Oseman</h5>
                 <p>Después de lanzarse a besar a Nick, Charlie cree que todo se ha acabado, pero... ¿es así? Heartstopper responde a la manera de sentir de los jóvenes reales, con una visión abierta, natural y sensible sobre el amor y la identidad sexual, sin perder nunca la delicadeza y la emoción.</p>
