--- a/pages/sinopsis-trans.html
+++ b/pages/sinopsis-trans.html
@@ -54,8 +54,8 @@
                 <h3>No todo es blanco o negro</h3>
             </div>
         </section>
-        <section class="card-sinopsis-1">
-            <div id="jesss">
+        <section class="card-sinopsis-1" id="jesss">
+            <div>
                 <h5>Mi hermano se llama Jessica - John Boyne</h5>
                 <p>Sam Waver es un chico solitario al que le cuesta hacer amigos, y sus padres están tan ajetreados que a veces se siente invisible. Por suerte, cuenta con su hermano mayor, Jason, quien parece tener una vida perfecta: no sólo es encantador y popular, también es la estrella del equipo de fútbol, y todas las chicas están deseando salir con él. Sam lo idolatra.
                 Sin embargo, un día, Jason reúne a su familia para contarle un secreto que lleva guardando mucho tiempo: en realidad se llama Jessica. Sus padres no dan crédito y Sam descubre que no son las personas abiertas y tolerantes que creía. Las vidas de todos dan un vuelco y parece que las cosas nunca volverán a ser como antes.</p>
@@ -64,8 +64,8 @@
                 <a href="./trans.html#jess"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/mi-hermano-se-llama-jessica.png" alt="Mi hermano se llama Jessica- Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-2">
-            <div id="uss">
+        <section class="card-sinopsis-2" id="uss">
+            <div>
                 <h5>Us - Sara Soler</h5>
                 <p>¿Qué pasa cuando la vida que tenías asumida da un giro de 180 grados? Nada. Y también todo. Us es la historia de amor de Sara y Diana, y también la historia de la transición de género de Diana. Habla de cómo ese proceso cambió la forma de concebir el mundo de ambas y a la vez hizo que se dieran cuenta de que nada tenía por qué cambiar tanto.</p>
             </div>
@@ -73,17 +73,17 @@
                 <a href="./trans.html#us"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/us.jpg" alt="Us - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-1">
-            <div id="amor">
+        <section class="card-sinopsis-1" id="6s">
+            <div>
                 <h5>(H)Amor 6 Trans - Platero Méndez, Lucas R.</h5>
                 <p>13 voces ponen cuerpo, afectos y escritura para tratar de dar respuestas a estas y otras cuestiones en este volumen colaborativo. Un conjunto diverso de reflexiones con una misma reivindicación, la de una vida plena, que merezca ser vivida, y llorada.</p>
             </div>
             <div>
-                <a href="./trans.html#amors"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/amor-trans.jpg" alt="(H)Amor 6 Trans- Portada de libro"></a>
+                <a href="./trans.html#6"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/amor-trans.jpg" alt="(H)Amor 6 Trans- Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-2">
-            <div id="mis">
+        <section class="card-sinopsis-2" id="mis">
+            <div>
                 <h5>Mi adolescencia trans - Josephine Yole Signorelli</h5>
                 <p>No hay artefacto cultural más poderoso que el capaz de transmitir dignidad, orgullo y fiereza a quien lo necesita. Este cómic, sin duda, lo es.</p>
             </div>
@@ -91,8 +91,8 @@
                 <a href="./trans.html#mi"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/mi-adolscencia-trans.jpg" alt=""></a>
             </div>
         </section>
-        <section class="card-sinopsis-1">
-            <div id="stays">
+        <section class="card-sinopsis-1" id="stays">
+            <div>
                 <h5>Stay gold: No dejes de ser tú mismo - Tobly McSmith</h5>
                 <p>Mantén la calma. Mantente fuerte. Mantente fiel a ti mismo. PONY solo quiere pasar desapercibido durante el último año de instituto. Cansado del interés que suscitaba después de declararse transgénero, espera un nuevo comienzo en Hillcrest High. GEORGIA empieza a sospechar que hay vida más allá de las animadoras y los chicos del equipo de fútbol. Por eso, se prometió a sí misma que las citas estarían oficialmente prohibidas este año. El primer día de clase, el chico nuevo y la animadora se miran a los ojos. ¿Cómo diablos aspira Pony a no llamar la atención cuando quiere acercarse a Georgia? ¿Cómo diablos va Georgia a mantener su promesa cuando conoce a Pony?</p>
             </div>
@@ -100,8 +100,8 @@
                 <a href="./trans.html#stay"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/stay-gold.png" alt="Stay gold: No dejes de ser tú mismo - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-2">
-            <div id="georges">
+        <section class="card-sinopsis-2" id="georges">
+            <div>
                 <h5>George: Simplemente sé tú mismo - Alex Gino</h5>
                 <p>Cuando la gente ve a George, cree que es un niño. Pero ella sabe que no es verdad. George sabe que es una niña.
                 George cree que jamás podrá decirle a nadie que ella, en realidad, es una niña.
@@ -112,8 +112,8 @@
                 <a href="./trans.html#george"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/george-simplemente.jpg" alt="George: Simplemente sé tú mismo - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-1">
-            <div id="soys">
+        <section class="card-sinopsis-1" id="soys">
+            <div>
                 <h5>Soy Sabrina, soy Santiago - Sasa Testa</h5>
                 <p>Cuando la gente ve a George, cree que es un niño. Pero ella sabe que no es verdad. George sabe que es una niña.
                 George cree que jamás podrá decirle a nadie que ella, en realidad, es una niña.
@@ -124,8 +124,8 @@
                 <a href="./trans.html#soy"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/soy-sabrina.jpg" alt="Soy Sabrina, soy Santiago - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-2">
-            <div id="humanos">
+        <section class="card-sinopsis-2" id="humanos">
+            <div>
                 <h5>Qué nos hace humanos - Jeff Garvin</h5>
                 <p>Mirar la vida a través de los ojos de otra persona. De eso se trata "Qué nos hace humanos", de Jeff Garvin... Es simplemente eso, ponerse en el lugar del otro, vivir como él, sentir como ella.</p>
             </div>
@@ -133,8 +133,8 @@
                 <a href="./trans.html#humano"><img class="cover-sinopsis" src="../assets/imagenes/book-covers/que-nos-hace-humanos.jpg" alt="Qué nos hace humanos - Portada de libro"></a>
             </div>
         </section>
-        <section class="card-sinopsis-1">
-            <div id="siyos">
+        <section class="card-sinopsis-1" id="siyos">
+            <div>
                 <h5>Si yo fuera tu chica - Meredith Russo</h5>
                 <p>AMANDA HARDY es la alumna nueva de la escuela en Lambertville; Tennesse. Como cualquier chica; lo unico que quiere es hacer amigos e integrarse. Pero Amanda mantiene un secreto. Existe una razón por la que se cambio de escuela en su último año y por la que tiene decidido no involucrarse con nadie.</p>
             </div>
@@ -151,7 +151,7 @@
             <ul>
                 <li><a href="../pages/lesbianas.html">Lesbianas</a></li>
                 <li><a href="../pages/gays.html">Gays</a></li>
-                <li><a href="#">Trans</a></li>
+                <li><a href="../pages/trans.html">Trans</a></li>
                 <li><a href="../pages/ingles.html">Inglés</a></li>
             </ul>
         </div>
