--- a/pages/trans.html
+++ b/pages/trans.html
@@ -55,7 +55,7 @@
                 <div class="card-content">
                     <h5>Mi hermano se llama Jessica</h5>
                     <p>John Boyne</p>
-                    <a href="../pages/sinopsis-trans.html#jesss" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#jesss">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="us">
@@ -63,15 +63,15 @@
                 <div class="card-content">
                     <h5>Us</h5>
                     <p>Sara Soler</p>
-                    <a href="../pages/sinopsis-trans.html#uss" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#uss">Ver más...</a>
                 </div>
             </div>
-            <div class="card" id="amor">
-                <img src="../assets/imagenes/book-covers/amor-trans.jpg" alt="(H)Amor 6 Trans- Portada de libro">
+            <div class="card" id="6">
+                <img src="../assets/imagenes/book-covers/amor-trans.jpg" alt="(H)Amor 6 Trans - Portada de libro">
                 <div class="card-content">
                     <h5>(H)Amor 6 Trans</h5>
                     <p>Platero Méndez, Lucas R.</p>
-                    <a href="../pages/sinopsis-trans.html#amors" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#6s">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="mi">
@@ -79,7 +79,7 @@
                 <div class="card-content">
                     <h5>Mi adolescencia trans</h5>
                     <p>Josephine Yole Signorelli</p>
-                    <a href="../pages/sinopsis-t.html#miss" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#mis">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="stay">
@@ -87,7 +87,7 @@
                 <div class="card-content">
                     <h5>Stay gold: No dejes de ser tú mismo</h5>
                     <p>Tobly McSmith</p>
-                    <a href="../pages/sinopsis-trans.html#stays" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#stays">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="george">
@@ -95,15 +95,15 @@
                 <div class="card-content">
                     <h5>George: Simplemente se tu mismo</h5>
                     <p>Alex Gino</p>
-                    <a href="../pages/sinopsis-t.html#georges" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#georges">Ver más...</a>
                 </div>
             </div>
-            <div class="card">
+            <div class="card" id="soy">
                 <img src="../assets/imagenes/book-covers/soy-sabrina.jpg" alt="Soy Sabrina, soy Santiago- Portada de libro">
                 <div class="card-content" id="soy">
                     <h5>Soy Sabrina, soy Santiago</h5>
                     <p>Sasa Testa</p>
-                    <a href="../pages/sinopsis-t.html#soys" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#soys">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="humano">
@@ -111,7 +111,7 @@
                 <div class="card-content">
                     <h5>Qué nos hace humanos</h5>
                     <p>Jeff Garvin</p>
-                    <a href="../pages/sinopsis-trans.html#humanos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#humanos">Ver más...</a>
                 </div>
             </div>
             <div class="card" id="siyo">
@@ -119,7 +119,7 @@
                 <div class="card-content">
                     <h5>Si yo fuera tu chica</h5>
                     <p>Meredith Russo</p>
-                    <a href="../pages/sinopsis-trans.html#siyos" target="_blank">Ver más...</a>
+                    <a href="../pages/sinopsis-trans.html#siyos">Ver más...</a>
                 </div>
             </div>
         </section>
